# gnofract4d

./: .gitattributes  .gitignore  .gnofract4d_version.txt  .travis.yml  LICENSE  README.md  createdocs.py  gnofract4d  meson.build  pylintrc  setup.py  test.py  tox.ini
.github/workflows/: codeql-analysis.yml  create-docs-branch.yml  publish-website.yml  release-file.yml  test-gnofract4d.yml  test-msys2.yml
doc/: release_process.md
docker/: Dockerfile
examples/: README.md
fract4d/: __init__.py  fractal.py  fractconfig.py  gradient.py  options.py
fract4d/c/: meson.build  pf.h
fract4d/c/fract4dc/: loaders.cpp
fract4d/c/model/: colormap.cpp
fract4d/tests/: test_fract4d.py
fract4d_compiler/: translate.py
fract4d_compiler/tests/: test_codegen.py
fract4dgui/: angle.py  application_window.py  fourway.py  settings_widgets.py
fract4dgui/tests/: test_angle.py  test_director.py  test_fourway.py  test_hig.py  test_main_window.py  test_painter.py  test_settings.py  test_undo.py
help/: book.min.42941dafe855a8d9b7e8bd6d513fd8f7e1333dd15d9ddd0024ea2bb625e7abb6.css  book.min.a3a858a426aa7663a1eb26a7a4cea5a3976a9331ac6a349171bb319877a9ae63.css  index.html
manual/: config.toml
manual/content/: _index.md
website/: config.toml  makeweb.py
website/content/: _index.md
website/themes/notheme/layouts/: index.html
